# learn-scrapping

./: pyproject.toml
src/: web_scrapper.py
src/utils/: sender.py
